[gd_scene load_steps=3 format=2]

[ext_resource path="res://res/menu_gui_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/username.gd" type="Script" id=2]

[node name="UserName" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 500, 0 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserNamePrompt" type="Label" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 54.0
theme = ExtResource( 1 )
text = "User Name"

[node name="UserNameEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 500.0
margin_bottom = 122.0
theme = ExtResource( 1 )

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 500.0
margin_bottom = 186.0
theme = ExtResource( 1 )
text = "Save"

[connection signal="text_entered" from="VBoxContainer/UserNameEdit" to="." method="_on_UserNameEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
